--- a/Unsplatter/Views/Base.lproj/Main.storyboard
+++ b/Unsplatter/Views/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -60,10 +61,104 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Photos" id="tWR-E9-uZE"/>
+                    <connections>
+                        <segue destination="bAk-cF-ETL" kind="show" identifier="showPhotoDetailsSegue" id="9hi-Dj-2pS"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VQm-7o-H5D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1677.5999999999999" y="-55.322338830584712"/>
+        </scene>
+        <!--Details Photo View Controller-->
+        <scene sceneID="FJU-dc-F49">
+            <objects>
+                <viewController id="bAk-cF-ETL" customClass="DetailsPhotoViewController" customModule="Unsplatter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9Dc-bH-SUf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="o6a-XW-ZtW">
+                                <rect key="frame" x="15" y="79" width="345" height="573"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="J2E-lP-i90">
+                                        <rect key="frame" x="0.0" y="0.0" width="345" height="45"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Gch-Qs-hBD">
+                                                <rect key="frame" x="0.0" y="0.0" width="107.5" height="45"/>
+                                                <subviews>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z2g-UO-e2u">
+                                                        <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="45" id="7if-05-h8N"/>
+                                                            <constraint firstAttribute="height" constant="45" id="Ih5-rG-Jqk"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="aj6-fJ-c5Z">
+                                                        <rect key="frame" x="60" y="0.0" width="47.5" height="45"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3gM-ow-KRc">
+                                                                <rect key="frame" x="0.0" y="0.0" width="47.5" height="29.5"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAP-2K-ixp">
+                                                                <rect key="frame" x="0.0" y="30.5" width="47.5" height="14.5"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                <color key="textColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBW-oi-fIH">
+                                                <rect key="frame" x="312.5" y="0.0" width="32.5" height="45"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="9FU-tE-Jcr"/>
+                                        </constraints>
+                                    </stackView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-photo" translatesAutoresizingMaskIntoConstraints="NO" id="89s-ht-GD0">
+                                        <rect key="frame" x="0.0" y="60" width="345" height="468"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PC8-9m-sVt">
+                                        <rect key="frame" x="0.0" y="543" width="345" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="0SZ-Lc-r72"/>
+                                        </constraints>
+                                        <state key="normal" title="location">
+                                            <color key="titleColor" red="0.66422420739999999" green="0.66424006219999998" blue="0.66423153879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="o6a-XW-ZtW" firstAttribute="leading" secondItem="2qI-LI-tZq" secondAttribute="leading" constant="15" id="Ckf-jP-RRN"/>
+                            <constraint firstItem="o6a-XW-ZtW" firstAttribute="top" secondItem="2qI-LI-tZq" secondAttribute="top" constant="15" id="PkI-M5-j3b"/>
+                            <constraint firstItem="2qI-LI-tZq" firstAttribute="bottom" secondItem="o6a-XW-ZtW" secondAttribute="bottom" constant="15" id="aVz-WC-to7"/>
+                            <constraint firstItem="2qI-LI-tZq" firstAttribute="trailing" secondItem="o6a-XW-ZtW" secondAttribute="trailing" constant="15" id="zdw-CN-2Rh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2qI-LI-tZq"/>
+                    </view>
+                    <connections>
+                        <outlet property="authorLabel" destination="3gM-ow-KRc" id="WKj-fg-e2g"/>
+                        <outlet property="authorProfileImageView" destination="Z2g-UO-e2u" id="dJm-Eh-0Xd"/>
+                        <outlet property="likesLabel" destination="FBW-oi-fIH" id="W8l-xB-GjH"/>
+                        <outlet property="locationButton" destination="PC8-9m-sVt" id="dFP-9I-dUX"/>
+                        <outlet property="photoImageView" destination="89s-ht-GD0" id="nZr-MA-00Z"/>
+                        <outlet property="usernameLabel" destination="ZAP-2K-ixp" id="86g-bG-zj3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EB7-D0-osq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2404" y="-51.724137931034484"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="iqL-x2-yri">
