--- a/Unsplatter/Views/Base.lproj/Main.storyboard
+++ b/Unsplatter/Views/Base.lproj/Main.storyboard
@@ -84,7 +84,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="345" height="45"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Gch-Qs-hBD">
-                                                <rect key="frame" x="0.0" y="0.0" width="107.5" height="45"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="129" height="45"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z2g-UO-e2u">
                                                         <rect key="frame" x="0.0" y="0.0" width="45" height="45"/>
@@ -94,16 +94,16 @@
                                                         </constraints>
                                                     </imageView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="aj6-fJ-c5Z">
-                                                        <rect key="frame" x="60" y="0.0" width="47.5" height="45"/>
+                                                        <rect key="frame" x="60" y="0.0" width="69" height="45"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3gM-ow-KRc">
-                                                                <rect key="frame" x="0.0" y="0.0" width="47.5" height="29.5"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="69" height="29.5"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAP-2K-ixp">
-                                                                <rect key="frame" x="0.0" y="30.5" width="47.5" height="14.5"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="profileName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAP-2K-ixp">
+                                                                <rect key="frame" x="0.0" y="30.5" width="69" height="14.5"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                 <color key="textColor" red="0.57414853570000002" green="0.57416242360000003" blue="0.57415497299999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -153,7 +153,7 @@
                         <outlet property="likesLabel" destination="FBW-oi-fIH" id="W8l-xB-GjH"/>
                         <outlet property="locationButton" destination="PC8-9m-sVt" id="dFP-9I-dUX"/>
                         <outlet property="photoImageView" destination="89s-ht-GD0" id="nZr-MA-00Z"/>
-                        <outlet property="usernameLabel" destination="ZAP-2K-ixp" id="86g-bG-zj3"/>
+                        <outlet property="profileNameLabel" destination="ZAP-2K-ixp" id="kJS-aN-vXa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EB7-D0-osq" userLabel="First Responder" sceneMemberID="firstResponder"/>
